<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_400"
    android:layout_margin="@dimen/size_2">

    <ImageView
        android:id="@+id/imageView_Id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_360"
        android:contentDescription="@string/image_context"
        android:scaleType="centerCrop"
        android:src="@drawable/zidan" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_30"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/image_text_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_20"
            android:layout_centerInParent="true"
            android:text="@string/zinedine_zidane" />

        <ImageButton
            android:id="@+id/image_commentButton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/size_3"
            android:background="@color/ff_color"
            android:contentDescription="@string/comment_button"
            android:src="@drawable/ic_comment_blue_24dp" />


        <ImageButton
            android:id="@+id/image_favorite_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/size_3"
            android:background="@color/ff_color"
            android:contentDescription="@string/favorite_button"
            android:src="@drawable/ic_favorite_border_blue_24dp" />

        <TextView
            android:id="@+id/comm_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/image_commentButton_id"
            android:layout_toRightOf="@id/image_commentButton_id"
            android:text="@string/comment_counter" />

        <TextView
            android:id="@+id/favorite_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/image_favorite_id"
            android:layout_toStartOf="@id/image_favorite_id"
            android:text="@string/favorite_counter"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</android.support.v7.widget.CardView>