<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_80">

        <ImageView
            android:id="@+id/comment_image_id"
            android:layout_width="@dimen/size_70"
            android:layout_height="@dimen/size_70"
            android:layout_margin="@dimen/size_2"
            android:contentDescription="@string/image_comm" />

        <TextView
            android:id="@+id/comment_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/comment_image_id"
            android:layout_toRightOf="@id/comment_image_id"
            android:text="@string/guf" />

        <TextView
            android:id="@+id/comment_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_toEndOf="@id/comment_image_id"
            android:layout_toRightOf="@id/comment_image_id"
            android:text="@string/comment" />

    </RelativeLayout>


</android.support.v7.widget.CardView>